[project]
name = "airflow-toolkit"
version = "0.2.0"
description = "Librairie open source d'outils, opérateurs et hooks pour Apache Airflow."
authors = [{ name = "Anis Salah-Bey" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "apache-airflow>=2.9.0",
  "clickhouse-driver>=0.2.9",
  "requests>=2.31.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
  "tests/test_date_utils.py",
  "tests/test_logging_utils.py",
  "tests/test_env_utils.py",
  "tests/test_filesystem_transfer_operator.py",
  "tests/test_http_to_filesystem_operator.py",
  "tests/test_dbt_runner_operator.py",
]
