[project]
name = "airflow-toolkit"
version = "0.2.0"
description = "Librairie d'operators, hooks et utilitaires pour Apache Airflow."
authors = [{ name = "Anis Salah-Bey" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "apache-airflow>=2.9.0",
  "clickhouse-driver>=0.2.9",
  "requests>=2.31.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# -----------------------
# Pytest configuration
# -----------------------
[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
  "tests/operators",
  "tests/integration",
]

# -----------------------
# Black configuration
# -----------------------
[tool.black]
line-length = 100
target-version = ["py312"]
include = ".*\\.py$"
exclude = """
(
  .git
 | .venv
 | build
 | dist
)
"""

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402"]
