[project]
name = "airflow-toolkit"
version = "1.0.0"
description = "Internal library providing reusable Apache Airflow operators, hooks and utilities."
readme = "README.md"
authors = [
  { name = "Anis Salah-Bey", email = "anis@example.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "apache-airflow>=2.9.0",
  "requests>=2.31.0",
  "pyyaml>=6.0.0",
  "clickhouse-driver>=0.2.9",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "ruff>=0.6.0",
]

# ----------------------------------------
# Build system (required for packaging)
# ----------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ----------------------------------------
# Pytest configuration
# ----------------------------------------
[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
  "tests/operators",
  "tests/integration",
]
python_files = ["test_*.py"]


# ----------------------------------------
# Black configuration
# ----------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]
include = ".*\\.py$"
exclude = """
(
  .git
| .venv
| build
| dist
)
"""


# ----------------------------------------
# Ruff configuration
# ----------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402"]   # Allow imports after module-level statements
